# textual_labelset

./: .gitignore  Makefile  README.md  pyproject.toml
src/textual_labelset/: __init__.py  demo.py  labelset.py
src/textual_tagset/: __init__.py  __main__.py  demo.py  layout_test.py  push_mre.py  tagset.py  tagset.tcss
src/textual_tagset/demo/: __init__.py  __main__.py  baseapp.py  basescreen.py  basescreen.tcss  data.py  demo_filtered_tagset.py  demo_filtered_tagset_selector.py  demo_tagset.py  demo_tagset_selector.py  filtered_tagset.py  filtered_tagset_selector.py  tagset.py  tagset_selector.py
tests/: tagset.tcss  test_tagsets.py
