[tool.poetry]
name = "textual-tagset"
version = "0.1.0"
description = "Maintain tag sets easily and visually"
authors = ["Steve Holden <steve@holdenweb.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ['^3.8']
textual = "^0.36.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
