[tool.poetry]
name = "textual-tagset"
version = "0.2.1"
description = "Maintain tag sets easily and visually"
authors = ["Steve Holden <steve@holdenweb.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ['^3.8']
textual = "^0.41.0"
textual-dev = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
mypy = "^1.7.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
